# ml-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
notebooks/: dataPreProcessing.py  eda.ipynb  final_submission.ipynb  preprocessing.ipynb  preprocessing.py
src/preprocessing/: cleaning.py  data_io.py  tfidf.py
src/task1/: logistic_regression.py  run.py
src/task2/: dimension_reduction.ipynb
src/task2/dimension_reduction/: __init__.py  knn.py  run.py
src/task2/feature_selection/: __init__.py  knn.py  logistic_regression.py  run.py
src/task3/: __init__.py  complement_nb.py  linear_svc.py  linear_svc_submit.py  random_forest.py  random_forest_submit.py  svd_logreg_hyperparam_search.py  xgboost_optuna.py  xgboost_optuna_submit.py
submissions/: LogReg_Prediction.csv  Task2_fs_100.csv  Task2_fs_1000.csv  Task2_fs_2000.csv  Task2_fs_500.csv  Task2_pca_100.csv  Task2_pca_1000.csv  Task2_pca_2000.csv  Task2_pca_500.csv  task2_knn_fs_100.csv  task2_knn_fs_1000.csv  task2_knn_fs_2000.csv  task2_knn_fs_500.csv  task2_knn_svd_100.csv  task2_knn_svd_1000.csv  task2_knn_svd_2000.csv  task2_knn_svd_500.csv  task3_SVD_LogReg.csv  task3_complement_nb.csv  task3_linear_svc.csv  task3_random_forest.csv  task3_xgboost_final.csv
